--- a/src/components/TodoList.css
+++ b/src/components/TodoList.css
@@ -20,3 +20,12 @@
     background-color: rgb(18, 18, 18);
     color: white;
 }
+
+.error-msg{
+    width: 40%;
+    height: 2rem;
+    font-weight: 600;
+    font-size: larger;
+    padding: 1.2rem 0rem 2.8rem 2.5rem;
+    
+}
